# papermc-bibliothek

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: push.yml  release.yml
bibliothek/: __init__.py  __main__.py  bibliothek.py
