[tool.poetry]
name = "papermc-bibliothek"
packages = [{ include = "bibliothek" }]
version = "6.0.0"
description = "bibliothek API client with CLI"
authors = ["Oskar <56176746+OskarZyg@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OskarsMC-Network/papermc-bibliothek"
homepage = "https://github.com/OskarsMC-Network/papermc-bibliothek"

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.2"
urllib3 = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
